{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 2637,
  "lineage": "ea6820db-e2e2-5ed0-84df-08bfeca4ad9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7e1fb256aeee340",
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:elastic-ip/eipalloc-0c7e1fb256aeee340",
            "association_id": "eipassoc-0b6739fcac9b27156",
            "domain": "vpc",
            "id": "eipalloc-0c7e1fb256aeee340",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-061a130a2b332c655",
            "private_dns": "ip-10-0-1-144.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-52-197-57-65.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.197.57.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:internet-gateway/igw-0b2ccd4d8090030d1",
            "id": "igw-0b2ccd4d8090030d1",
            "owner_id": "332260094679",
            "tags": {
              "Name": "tamotsu-igw"
            },
            "tags_all": {
              "Name": "tamotsu-igw"
            },
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "dependencies": [
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7e1fb256aeee340",
            "association_id": "eipassoc-0b6739fcac9b27156",
            "connectivity_type": "public",
            "id": "nat-0dd36fd19602c9d98",
            "network_interface_id": "eni-061a130a2b332c655",
            "private_ip": "10.0.1.144",
            "public_ip": "52.197.57.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02350e00d8b94cb3f",
            "tags": {
              "Name": "tamotsu-nat-gateway"
            },
            "tags_all": {
              "Name": "tamotsu-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:route-table/rtb-02736dfed6975da3a",
            "id": "rtb-02736dfed6975da3a",
            "owner_id": "332260094679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dd36fd19602c9d98",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tamotsu-private-route-table"
            },
            "tags_all": {
              "Name": "tamotsu-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:route-table/rtb-0ebdad01772cd63cb",
            "id": "rtb-0ebdad01772cd63cb",
            "owner_id": "332260094679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2ccd4d8090030d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tamotsu-public-route-table"
            },
            "tags_all": {
              "Name": "tamotsu-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d99f8992e871b160",
            "route_table_id": "rtb-02736dfed6975da3a",
            "subnet_id": "subnet-0341814cd2e2c03ff"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet",
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0864c9eb5b6098330",
            "route_table_id": "rtb-02736dfed6975da3a",
            "subnet_id": "subnet-0303cc068df93913a"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet",
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0092022a0267be523",
            "route_table_id": "rtb-0ebdad01772cd63cb",
            "subnet_id": "subnet-02350e00d8b94cb3f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:security-group/sg-022b56cb1286bf30e",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022b56cb1286bf30e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "14.10.63.225/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tamotsu-lambda-sg",
            "name_prefix": "",
            "owner_id": "332260094679",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tamotsu_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:security-group/sg-07d1903fe4c09c2aa",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d1903fe4c09c2aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022b56cb1286bf30e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tamotsu-rds-sg",
            "name_prefix": "",
            "owner_id": "332260094679",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.tamotsu_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:subnet/subnet-0341814cd2e2c03ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0341814cd2e2c03ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332260094679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tamotsu-private-subnet-1"
            },
            "tags_all": {
              "Name": "tamotsu-private-subnet-1"
            },
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "dependencies": [
            "aws_vpc.tamotsu_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:subnet/subnet-0303cc068df93913a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0303cc068df93913a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332260094679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tamotsu-private-subnet-2"
            },
            "tags_all": {
              "Name": "tamotsu-private-subnet-2"
            },
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "dependencies": [
            "aws_vpc.tamotsu_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:subnet/subnet-02350e00d8b94cb3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02350e00d8b94cb3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332260094679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tamotsu-public-subnet"
            },
            "tags_all": {
              "Name": "tamotsu-public-subnet"
            },
            "vpc_id": "vpc-0d06dc8bf003a54cd"
          },
          "dependencies": [
            "aws_vpc.tamotsu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tamotsu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:332260094679:vpc/vpc-0d06dc8bf003a54cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca90443fc3883e33",
            "default_route_table_id": "rtb-022b992b77c62719c",
            "default_security_group_id": "sg-01021f7279e31bb72",
            "dhcp_options_id": "dopt-03fc14f3f531966ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d06dc8bf003a54cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022b992b77c62719c",
            "owner_id": "332260094679",
            "tags": {
              "Name": "tamotsu-vpc"
            },
            "tags_all": {
              "Name": "tamotsu-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}